--- a/app/src/main/res/layout/app_bar_main.xml
+++ b/app/src/main/res/layout/app_bar_main.xml
@@ -8,25 +8,22 @@
     android:fitsSystemWindows="true"
     tools:context="com.naceyeve.liandroid.MainActivity">
 
-    <android.support.design.widget.AppBarLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:fitsSystemWindows="true"
-        android:theme="@style/AppTheme.AppBarOverlay">
-
-        <android.support.v7.widget.Toolbar
-            android:id="@+id/toolbar"
-            android:layout_width="match_parent"
-            android:layout_height="?attr/actionBarSize"
-            android:background="?attr/colorPrimary"
-            app:popupTheme="@style/AppTheme.PopupOverlay"
-            android:fitsSystemWindows="true"
-            app:layout_scrollFlags="scroll|enterAlways"
-           />
-
-    </android.support.design.widget.AppBarLayout>
+    <include layout="@layout/toolbar"/>
 
     <include layout="@layout/content_main"/>
+
+    <android.support.design.widget.BottomNavigationView
+        android:id="@+id/bottom_navigation"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_gravity="bottom"
+        android:background="@color/main_tab_background"
+        app:itemIconTint="@drawable/bottom_item_color"
+        app:itemTextColor="@drawable/bottom_item_color"
+        app:layout_behavior="@string/bye_burger_bottom_behavior"
+        app:menu="@menu/menu_bottom_navigation">
+
+    </android.support.design.widget.BottomNavigationView>
 
     <android.support.design.widget.FloatingActionButton
         android:id="@+id/fab"
