--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -16,4 +16,5 @@
     <dimen name="touch_raise">6dp</dimen>
 
     <dimen name="text_size">18sp</dimen>
+    <dimen name="image_width">120dp</dimen>
 </resources>
