--- a/app/src/main/res/layout/error_layout.xml
+++ b/app/src/main/res/layout/error_layout.xml
@@ -7,6 +7,7 @@
     android:layout_height="wrap_content">
 
     <TextView
+        android:id="@+id/status_view_tv_error"
         android:text="出错了喵...( ＞ω＜)"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content" />
